deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: merge-sentinel
spec:
  selector:
    app: merge-sentinel
  ports:
    - port: 8080
      targetPort: 8080
      name: http
