deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sentinel
spec:
  to:
    kind: Service
    name: sentinel
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
